--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -665,6 +665,7 @@
 	<item drawable="solar_smash" />
 	<item drawable="that_level_again" />
 	<item drawable="the_seven_deadly_sins" />
+	<item drawable="infinite_loop" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1407,6 +1408,7 @@
 	<item drawable="hsmwmobil_alt" />
 	<item drawable="iceraven_alt" />
 	<item drawable="ikea_home_smart_alt" />
+	<item drawable="infinite_loop_alt" />
 	<item drawable="infinity_alt" />
 	<item drawable="inshot_alt" />
 	<item drawable="instacart_alt" />
