--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10961,4 +10961,5 @@
 	<item component="ComponentInfo{com.android.lmc82/com.android.camera.CameraLauncher}" drawable="camera" />
 	<item component="ComponentInfo{com.perracolabs.cp/com.perracolabs.cameringo.Main}" drawable="camera" />
 	<item component="ComponentInfo{net.kollnig.missioncontrol.play/eu.faircode.netguard.ActivityMain}" drawable="trackercontrol" />
+	<item component="ComponentInfo{net.techet.netanalyzer.an/net.techet.netanalyzer.an.activity.MainActivity}" drawable="network_analyzer" />
 </resources>
