--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -194,7 +194,7 @@
         name="Gitro"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/108683123"
-        link="https://github.com/AbsurdUsername" />
+        link="https://github.com/GitGitro" />
 	<contributor
         name="dreamcatcher3677"
         contribution="Icons"
