--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -666,6 +666,9 @@
 	<item drawable="that_level_again" />
 	<item drawable="the_seven_deadly_sins" />
 	<item drawable="infinite_loop" />
+	<item drawable="connect_you" />
+	<item drawable="inure" />
+	<item drawable="nozzle" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -3254,6 +3257,7 @@
 	<item drawable="computer_launcher_beta" />
 	<item drawable="conad" />
 	<item drawable="concepts" />
+	<item drawable="connect_you" />
 	<item drawable="connectbot" />
 	<item drawable="connected2me" />
 	<item drawable="connectwise_control" />
@@ -4600,6 +4604,7 @@
 	<item drawable="intesa_investo" />
 	<item drawable="intesa_mobile" />
 	<item drawable="intra" />
+	<item drawable="inure" />
 	<item drawable="inv" />
 	<item drawable="inventory_and_shopping_list" />
 	<item drawable="invi" />
@@ -5825,6 +5830,7 @@
 	<item drawable="nowtv" />
 	<item drawable="nox_cleaner" />
 	<item drawable="nozbe" />
+	<item drawable="nozzle" />
 	<item drawable="npbs" />
 	<item drawable="npr_one" />
 	<item drawable="nrj" />
