--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10962,4 +10962,7 @@
 	<item component="ComponentInfo{com.perracolabs.cp/com.perracolabs.cameringo.Main}" drawable="camera" />
 	<item component="ComponentInfo{net.kollnig.missioncontrol.play/eu.faircode.netguard.ActivityMain}" drawable="trackercontrol" />
 	<item component="ComponentInfo{net.techet.netanalyzer.an/net.techet.netanalyzer.an.activity.MainActivity}" drawable="network_analyzer" />
+	<item component="ComponentInfo{com.bnyro.contacts/com.bnyro.contacts.ui.MainActivity}" drawable="connect_you" />
+	<item component="ComponentInfo{app.simple.inure/app.simple.inure.activities.app.MainActivity}" drawable="inure" />
+	<item component="ComponentInfo{com.kaiwolfram.nozzle/com.kaiwolfram.nozzle.MainActivity}" drawable="nozzle" />
 </resources>
