--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -241,7 +241,7 @@
         image="https://avatars.githubusercontent.com/u/24735185"
         link="https://github.com/mahmoudk1000" />
     <contributor
-        name="Patryk 'Chefski' R"
+        name="Patryk 'Chefski' Radziszewski"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/100310118"
         link="https://github.com/Chefski" />
