--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -669,6 +669,12 @@
 	<item drawable="connect_you" />
 	<item drawable="inure" />
 	<item drawable="nozzle" />
+	<item drawable="ashell" />
+	<item drawable="meshtastic" />
+	<item drawable="vpnhood" />
+	<item drawable="wake_on_lan" />
+	<item drawable="zap" />
+	<item drawable="lsposed_manager" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1440,6 +1446,7 @@
 	<item drawable="libretube_shaped" />
 	<item drawable="libretube_torch" />
 	<item drawable="lichess_alt" />
+	<item drawable="lsposed_manager_alt" />
 	<item drawable="ludo_king_alt" />
 	<item drawable="lvm_track_alt" />
 	<item drawable="macrodroid_alt_three" />
@@ -2505,6 +2512,7 @@
 	<item drawable="asana" />
 	<item drawable="asap_launcher" />
 	<item drawable="asd_player" />
+	<item drawable="ashell" />
 	<item drawable="ask_fm" />
 	<item drawable="asphalt_2" />
 	<item drawable="asphalt_8" />
@@ -5229,6 +5237,7 @@
 	<item drawable="merriam_webster" />
 	<item drawable="mesh_diary" />
 	<item drawable="meshenger" />
+	<item drawable="meshtastic" />
 	<item drawable="messagerie_free" />
 	<item drawable="messenger_kids" />
 	<item drawable="messenger_lite" />
@@ -7951,6 +7960,7 @@
 	<item drawable="voyager" />
 	<item drawable="vpn_hotspot" />
 	<item drawable="vpn" />
+	<item drawable="vpnhood" />
 	<item drawable="vpnhub" />
 	<item drawable="vpnify" />
 	<item drawable="vpnunlimited" />
@@ -7977,6 +7987,7 @@
 	<item drawable="wahl_o_mat" />
 	<item drawable="waistline" />
 	<item drawable="wakanim" />
+	<item drawable="wake_on_lan" />
 	<item drawable="wakelock_detector" />
 	<item drawable="wakey" />
 	<item drawable="waking_up" />
@@ -8310,6 +8321,7 @@
 	<item drawable="zalora" />
 	<item drawable="zameen" />
 	<item drawable="zanti" />
+	<item drawable="zap" />
 	<item drawable="zap_map" />
 	<item drawable="zapp" />
 	<item drawable="zappka" />
