--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10970,4 +10970,5 @@
 	<item component="ComponentInfo{com.vpnhood.client.android/crc647486a17e72a62434.MainActivity}" drawable="vpnhood" />
 	<item component="ComponentInfo{de.florianisme.wakeonlan/de.florianisme.wakeonlan.ui.MainActivity}" drawable="wake_on_lan" />
 	<item component="ComponentInfo{zapsolutions.zap/zapsolutions.zap.LandingActivity}" drawable="zap" />
+	<item component="ComponentInfo{app.lawnchair.lawnicons.light/app.lawnchair.lawnicons.MainActivity}" drawable="lawnicons" />
 </resources>
