--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -675,6 +675,8 @@
 	<item drawable="wake_on_lan" />
 	<item drawable="zap" />
 	<item drawable="lsposed_manager" />
+	<item drawable="pdf_doc_scan" />
+	<item drawable="tarnhelm" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -6131,6 +6133,7 @@
 	<item drawable="pdanet" />
 	<item drawable="pdc" />
 	<item drawable="pdd" />
+	<item drawable="pdf_doc_scan" />
 	<item drawable="pdf_merge" />
 	<item drawable="pdf_reader" />
 	<item drawable="pdf_viewer_plus" />
@@ -7395,6 +7398,7 @@
 	<item drawable="tappytoon" />
 	<item drawable="taptap" />
 	<item drawable="target" />
+	<item drawable="tarnhelm" />
 	<item drawable="taskade" />
 	<item drawable="taskbar" />
 	<item drawable="tasker" />
