--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -7,6 +7,7 @@
 	<item drawable="_3d_compass_plus" />
 	<item drawable="_3d_pinball_space_cadet" />
 	<item drawable="accordion" />
+	<item drawable="air_canada" />
 	<item drawable="airmusic" />
 	<item drawable="al_azan" />
 	<item drawable="aleria_for_kwgt" />
@@ -2212,6 +2213,7 @@
 	<item drawable="aimp" />
 	<item drawable="aino" />
 	<item drawable="aio_launcher" />
+	<item drawable="air_canada" />
 	<item drawable="air_france" />
 	<item drawable="airasia" />
 	<item drawable="airbattery" />
