--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11,6 +11,7 @@
 	<item drawable="airmusic" />
 	<item drawable="al_azan" />
 	<item drawable="aleria_for_kwgt" />
+	<item drawable="alertus" />
 	<item drawable="am2r" />
 	<item drawable="amarok" />
 	<item drawable="amazfaces" />
@@ -2257,6 +2258,7 @@
 	<item drawable="aleria_for_kwgt" />
 	<item drawable="alertable" />
 	<item drawable="alertify" />
+	<item drawable="alertus" />
 	<item drawable="alexis_pie" />
 	<item drawable="alexis" />
 	<item drawable="alfa" />
