--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -747,6 +747,7 @@
 	<item component="ComponentInfo{com.aldiko.android/com.demarque.android.ui.splash_welcome.SplashActivity}" drawable="aldiko_next" />
 	<item component="ComponentInfo{com.alensw.PicFolder/com.alensw.PicFolder.GalleryActivity}" drawable="quick__pic" />
 	<item component="ComponentInfo{com.alensw.PicFolder/com.alensw.PicFolder.MainActivity}" drawable="quick__pic" />
+	<item component="ComponentInfo{com.alertus.mobile_receiver/com.alertus.mobile_receiver.MainActivity}" drawable="alertus" />
 	<item component="ComponentInfo{com.alexanderkondrashov.slovari/com.alexanderkondrashov.slovari.MainActivity}" drawable="english_russian_dictionary" />
 	<item component="ComponentInfo{com.alexandersandberg.tinyweather/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="tiny_weather" />
 	<item component="ComponentInfo{com.alexmercerind.harmonoid/com.alexmercerind.harmonoid.MainActivity}" drawable="harmonoid" />
