Add Alertus Activator

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -12,6 +12,7 @@
 	<item drawable="al_azan" />
 	<item drawable="aleria_for_kwgt" />
 	<item drawable="alertus" />
+	<item drawable="alertus_activator" />
 	<item drawable="am2r" />
 	<item drawable="amarok" />
 	<item drawable="amazfaces" />
@@ -2259,6 +2260,7 @@
 	<item drawable="alertable" />
 	<item drawable="alertify" />
 	<item drawable="alertus" />
+	<item drawable="alertus_activator" />
 	<item drawable="alexis_pie" />
 	<item drawable="alexis" />
 	<item drawable="alfa" />
