Add Canadian Tire

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6713,6 +6713,7 @@
 	<item component="ComponentInfo{com.simplexsolutionsinc.vpn_unlimited/com.simplexsolutionsinc.vpn_unlimited.ui.screens.splash.SplashScreenActivity}" drawable="vpnunlimited" />
 	<item component="ComponentInfo{com.simplified.reborn/com.simplified.reborn.activities.SplashActivity}" drawable="simplified_material" />
 	<item component="ComponentInfo{com.simplisafe.mobile/com.simplisafe.mobile.features.dashboard.DashboardActivity}" drawable="simplisafe" />
+	<item component="ComponentInfo{com.simplygood.ct/ca.triangle.retail.canadiantire.splash_screen.SplashActivity}" drawable="canadian_tire" />
 	<item component="ComponentInfo{com.simplytranslate_mobile/com.simplytranslate_mobile.MainActivity}" drawable="simply_translate" />
 	<item component="ComponentInfo{com.simrat39.AnimeTwistFlut/com.simrat39.AnimeTwistFlut.MainActivity}" drawable="animetwistflut" />
 	<item component="ComponentInfo{com.simyo/com.simyo.ui.modules.deeplink.DeepLinkActivity}" drawable="simyo" />
