--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -21,6 +21,7 @@
 	<item drawable="anilabx" />
 	<item drawable="anywhere" />
 	<item drawable="aves_gallery" />
+	<item drawable="canadian_tire" />
 	<item drawable="clipeus" />
 	<item drawable="comix_zone" />
 	<item drawable="crazy_taxi" />
@@ -3030,6 +3031,7 @@
 	<item drawable="campus_student" />
 	<item drawable="canabalt_hd" />
 	<item drawable="canada_post" />
+	<item drawable="canadian_tire" />
 	<item drawable="canda" />
 	<item drawable="candid" />
 	<item drawable="candies_n_curses" />
