Add Countdown Timer

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9194,6 +9194,7 @@
 	<item component="ComponentInfo{me.echeung.moemoekyun.fdroid/me.echeung.moemoekyun.ui.activity.MainActivity}" drawable="listen_moe" />
 	<item component="ComponentInfo{me.fengmlo.qbRemote/me.fengmlo.qb_remote.MainActivity}" drawable="qbittorrent_remote" />
 	<item component="ComponentInfo{me.fengmlo.qbRemoteFree/me.fengmlo.qb_remote.MainActivity}" drawable="qbittorrent_remote" />
+	<item component="ComponentInfo{me.gira.widget.countdown/me.gira.widget.countdown.MainActivity}" drawable="countdown_widget" />
 	<item component="ComponentInfo{me.greenlight/me.greenlight.app.onboarding.WelcomeActivity}" drawable="greenlight" />
 	<item component="ComponentInfo{me.hackerchick.catima.debug/protect.card_locker.MainActivity}" drawable="catima" />
 	<item component="ComponentInfo{me.hackerchick.catima/protect.card_locker.MainActivity}" drawable="catima" />
