--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -24,6 +24,7 @@
 	<item drawable="canadian_tire" />
 	<item drawable="clipeus" />
 	<item drawable="comix_zone" />
+	<item drawable="countdown_widget" />
 	<item drawable="crazy_taxi" />
 	<item drawable="cube_escape_harveys_box" />
 	<item drawable="deemo_2" />
@@ -3311,6 +3312,7 @@
 	<item drawable="couch_to_5k" />
 	<item drawable="couch_to_five_k" />
 	<item drawable="couchsurfing" />
+	<item drawable="countdown_widget" />
 	<item drawable="counter" />
 	<item drawable="counters" />
 	<item drawable="countries_been" />
