Update Tim Hortons
New ComponentInfo and also a new icon that's less text-heavy than the real one. This maple leaf logo is based on the logo on their coffee cup sleeves and on their newer restaurants.

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8505,6 +8505,7 @@
 	<item component="ComponentInfo{devian.tubemate.v3/devian.tubemate.v3.Main}" drawable="tube__mate" />
 	<item component="ComponentInfo{digifit.virtuagym.client.android/digifit.android.virtuagym.presentation.screen.home.overview.view.HomeActivity}" drawable="workout" />
 	<item component="ComponentInfo{digital.neobank/digital.neobank.features.splash.SplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{digital.rbi.timhortons/digital.rbi.timhortons.MainActivity}" drawable="tim_hortons" />
 	<item component="ComponentInfo{digital.rbi.timhortons/digital.rbi.timhortons.presentation.launch.LaunchActivity}" drawable="tim_hortons" />
 	<item component="ComponentInfo{digital.rbi.timhortons/rbi.android.app.MainActivity}" drawable="tim_hortons" />
 	<item component="ComponentInfo{dji.go.v4/dji.pilot.main.activity.DJILauncherActivity}" drawable="dji" />
