--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -375,6 +375,7 @@
 	<item drawable="sumisumi" />
 	<item drawable="the_elder_scrolls_legends" />
 	<item drawable="ticketek" />
+	<item drawable="tim_hortons" />
 	<item drawable="tinc_app" />
 	<item drawable="tiny_music_player" />
 	<item drawable="torrserve" />
@@ -1951,6 +1952,7 @@
 	<item drawable="the_wallet_alt" />
 	<item drawable="tiktok_alt_two" />
 	<item drawable="tiktok_alt" />
+	<item drawable="tim_hortons_alt" />
 	<item drawable="tinkoff_alt" />
 	<item drawable="tiny_weather_forecast_germany_alt" />
 	<item drawable="tower_of_fantasy_alt" />
