--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1815,6 +1815,7 @@
 	<item component="ComponentInfo{com.camsam/de.blitzer.activity.SplashScreen}" drawable="blitzer_de" />
 	<item component="ComponentInfo{com.camvision.qrcode.barcode.reader/com.camvision.qrcode.barcode.reader.main.Qr2MainActivity}" drawable="qr_and_barcode_scanner" />
 	<item component="ComponentInfo{com.canadapost.android/ca.canadapost.SplashActivity}" drawable="canada_post" />
+	<item component="ComponentInfo{com.canadiantire.triangle/ca.triangle.app.splash_screen.SplashActivity}" drawable="triangle" />
 	<item component="ComponentInfo{com.canarabank.mobility/com.canarabank.mobility.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.cancadrilo.android.abc/com.example.myapplication.MainActivity}" drawable="mad_barz" />
 	<item component="ComponentInfo{com.canda.mobileapp/com.deloitte.canda.view.splash.SplashActivity}" drawable="canda" />
