--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -379,6 +379,7 @@
 	<item drawable="tinc_app" />
 	<item drawable="tiny_music_player" />
 	<item drawable="torrserve" />
+	<item drawable="triangle" />
 	<item drawable="uplayer" />
 	<item drawable="vanadium" />
 	<item drawable="vectorman" />
@@ -7671,6 +7672,7 @@
 	<item drawable="trenitalia" />
 	<item drawable="trenord" />
 	<item drawable="tresorit" />
+	<item drawable="triangle" />
 	<item drawable="tribeloo" />
 	<item drawable="tricount" />
 	<item drawable="trigger" />
