--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -380,6 +380,8 @@
 	<item drawable="tiny_music_player" />
 	<item drawable="torrserve" />
 	<item drawable="triangle" />
+	<item drawable="triplinx" />
+	<item drawable="triplinx_alt" />
 	<item drawable="uplayer" />
 	<item drawable="vanadium" />
 	<item drawable="vectorman" />
@@ -1958,6 +1960,7 @@
 	<item drawable="tiny_weather_forecast_germany_alt" />
 	<item drawable="tower_of_fantasy_alt" />
 	<item drawable="transmission_remote_alt" />
+	<item drawable="triplinx_alt" />
 	<item drawable="trivia_you_alt" />
 	<item drawable="truist_alt" />
 	<item drawable="trust_alt" />
@@ -7681,6 +7684,7 @@
 	<item drawable="tripadvisor" />
 	<item drawable="tripeaks" />
 	<item drawable="tripit" />
+	<item drawable="triplinx" />
 	<item drawable="tripview" />
 	<item drawable="tripwolf" />
 	<item drawable="trivia_crack" />
