--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -440,6 +440,7 @@
 	<item component="ComponentInfo{ca.lapresse.android.lapressemobile/ca.lapresse.android.lapressemobile.StartupActivity}" drawable="la_presse" />
 	<item component="ComponentInfo{ca.libro.android/ca.libro.android.app.WebViewActivity}" drawable="libro" />
 	<item component="ComponentInfo{ca.markham.accessmarkhammobile/ca.markham.accessmarkhammobile.MainActivity}" drawable="access_markham" />
+	<item component="ComponentInfo{ca.metrolinx.triplinx/fr.cityway.product.presentation.view.activity.SplashScreenActivity}" drawable="triplinx" />
 	<item component="ComponentInfo{ca.mobile.explorer/crc64c7d70d841b4cd9a9.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{ca.ontariotechu.ontariotechmobile/modolabs.kurogo.activity.ModuleActivity}" drawable="ontario_tech_mobile" />
 	<item component="ComponentInfo{ca.pcfinancial.bank/com.pcf.phoenix.deeplink.DeeplinkActivity}" drawable="bank" />
