--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10984,4 +10984,5 @@
 	<item component="ComponentInfo{cn.ac.lz233.tarnhelm/cn.ac.lz233.tarnhelm.ui.main.MainActivity}" drawable="tarnhelm" />
 	<item component="ComponentInfo{com.android1500.gpssetter/com.android1500.gpssetter.ui.MapActivity}" drawable="gps_setter" />
 	<item component="ComponentInfo{app.lawnchair.debug/app.lawnchair.LawnchairLauncher}" drawable="lawnchair_launcher" />
+	<item component="ComponentInfo{com.marinetraffic.android/com.marinetraffic.android.AIRAppEntry}" drawable="marinetraffic" />
 </resources>
