--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="m-pesa" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -4431,6 +4432,7 @@
 	<item drawable="m2_wear" />
 	<item drawable="m2wear" />
 	<item drawable="m64plus_fz" />
+	<item drawable="m-pesa" />
 	<item drawable="m_indicator" />
 	<item drawable="ma_livebox" />
 	<item drawable="mach" />
