--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10986,4 +10986,5 @@
 	<item component="ComponentInfo{app.lawnchair.debug/app.lawnchair.LawnchairLauncher}" drawable="lawnchair_launcher" />
 	<item component="ComponentInfo{com.marinetraffic.android/com.marinetraffic.android.AIRAppEntry}" drawable="marinetraffic" />
 	<item component="ComponentInfo{com.safaricom.mpesa.lifestyle/com.mpesa.splash.SplashActivity}" drawable="m-pesa" />
+	<item component="ComponentInfo{yuku.alkitab/yuku.alkitab.base.IsiActivity}" drawable="alkitab" />
 </resources>
