--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="m-pesa" />
+	<item drawable="alkitab" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1601,6 +1602,7 @@
 	<item drawable="aliucord_installer" />
 	<item drawable="aliyun_drive" />
 	<item drawable="aljazeera" />
+	<item drawable="alkitab" />
 	<item drawable="all__trails" />
 	<item drawable="all_document_reader" />
 	<item drawable="all_file_converter" />
