--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,22 @@
 	<category title="New" />
 	<item drawable="m-pesa" />
 	<item drawable="alkitab" />
+	<item drawable="ad_free" />
+	<item drawable="anpaside" />
+	<item drawable="burpy_walls" />
+	<item drawable="comviq" />
+	<item drawable="direct_express" />
+	<item drawable="disposable_camera" />
+	<item drawable="dooz" />
+	<item drawable="foreground" />
+	<item drawable="gridle" />
+	<item drawable="mintos" />
+	<item drawable="nova_video_player" />
+	<item drawable="permission_manager_x" />
+	<item drawable="qserv" />
+	<item drawable="secuso_minesweeper" />
+	<item drawable="tag_livros" />
+	<item drawable="xplora" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -1464,6 +1480,7 @@
 	<item drawable="activitywatch" />
 	<item drawable="actor_detector" />
 	<item drawable="actual" />
+	<item drawable="ad_free" />
 	<item drawable="ad_silence" />
 	<item drawable="ada" />
 	<item drawable="adac_pannenhilfe" />
@@ -1740,6 +1757,7 @@
 	<item drawable="another_notes" />
 	<item drawable="another_widget" />
 	<item drawable="anova" />
+	<item drawable="anpaside" />
 	<item drawable="anslayer" />
 	<item drawable="antar" />
 	<item drawable="antennapod" />
@@ -2296,6 +2314,7 @@
 	<item drawable="bundle_news" />
 	<item drawable="bundled_notes" />
 	<item drawable="burger_king" />
+	<item drawable="burpy_walls" />
 	<item drawable="bus62" />
 	<item drawable="bus_taipei" />
 	<item drawable="business_calendar" />
@@ -2598,6 +2617,7 @@
 	<item drawable="communauto" />
 	<item drawable="compass_school_manager" />
 	<item drawable="computer_launcher_beta" />
+	<item drawable="comviq" />
 	<item drawable="conad" />
 	<item drawable="concepts" />
 	<item drawable="connect_you" />
@@ -2878,6 +2898,7 @@
 	<item drawable="dineout" />
 	<item drawable="diohub" />
 	<item drawable="dir" />
+	<item drawable="direct_express" />
 	<item drawable="directv" />
 	<item drawable="discogs" />
 	<item drawable="discord" />
@@ -2890,6 +2911,7 @@
 	<item drawable="disney_plus" />
 	<item drawable="disneyland" />
 	<item drawable="display_info" />
+	<item drawable="disposable_camera" />
 	<item drawable="ditm_meds" />
 	<item drawable="dito" />
 	<item drawable="divoom" />
@@ -2926,6 +2948,7 @@
 	<item drawable="doodle" />
 	<item drawable="doodle_live_wallpapers" />
 	<item drawable="doordash" />
+	<item drawable="dooz" />
 	<item drawable="doppelreim" />
 	<item drawable="dota_underlords" />
 	<item drawable="dotpict" />
@@ -3375,6 +3398,7 @@
 	<item drawable="fordpass" />
 	<item drawable="forecaster" />
 	<item drawable="forecastie" />
+	<item drawable="foreground" />
 	<item drawable="forest" />
 	<item drawable="forex_com" />
 	<item drawable="forge_of_neon" />
@@ -3606,6 +3630,7 @@
 	<item drawable="greenstash" />
 	<item drawable="grid_autosport" />
 	<item drawable="grid_connect" />
+	<item drawable="gridle" />
 	<item drawable="grindr" />
 	<item drawable="grocy" />
 	<item drawable="groove_coaster_2" />
@@ -4705,6 +4730,7 @@
 	<item drawable="mint_browser" />
 	<item drawable="mint_launcher" />
 	<item drawable="mint_mobile" />
+	<item drawable="mintos" />
 	<item drawable="minty_icons_free" />
 	<item drawable="minty_icons_pro" />
 	<item drawable="mir_pay" />
@@ -5169,6 +5195,7 @@
 	<item drawable="nova_launcher_prime" />
 	<item drawable="nova_poshta" />
 	<item drawable="nova_settings" />
+	<item drawable="nova_video_player" />
 	<item drawable="now" />
 	<item drawable="now_mobile" />
 	<item drawable="nowakelock" />
@@ -5498,6 +5525,7 @@
 	<item drawable="periodic_table" />
 	<item drawable="periodical" />
 	<item drawable="periscope" />
+	<item drawable="permission_manager_x" />
 	<item drawable="permission_pilot" />
 	<item drawable="permission_ruler" />
 	<item drawable="personal_capital" />
@@ -5794,6 +5822,7 @@
 	<item drawable="qr_and_barcode_scanner" />
 	<item drawable="qr_code_reader" />
 	<item drawable="qralarm" />
+	<item drawable="qserv" />
 	<item drawable="qt_notes" />
 	<item drawable="quad_touch" />
 	<item drawable="quake_earthquakes" />
@@ -6183,6 +6212,7 @@
 	<item drawable="secure_vpn" />
 	<item drawable="securepoint" />
 	<item drawable="securew2" />
+	<item drawable="secuso_minesweeper" />
 	<item drawable="seek" />
 	<item drawable="seeker" />
 	<item drawable="seeking_alpha" />
@@ -6707,6 +6737,7 @@
 	<item drawable="tachiyomi_j2k" />
 	<item drawable="tachiyomi_sy" />
 	<item drawable="taco_bell" />
+	<item drawable="tag_livros" />
 	<item drawable="tagespresse" />
 	<item drawable="tagesschau" />
 	<item drawable="tagmo" />
@@ -7564,6 +7595,7 @@
 	<item drawable="xpark" />
 	<item drawable="xperia_lounge" />
 	<item drawable="xplayer" />
+	<item drawable="xplora" />
 	<item drawable="xplore_file_manager" />
 	<item drawable="xposed_installer" />
 	<item drawable="xposedsmscode" />
