--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11003,4 +11003,5 @@
 	<item component="ComponentInfo{org.secuso.privacyfriendlyminesweeper/org.secuso.privacyfriendlyminesweeper.activities.SplashActivity}" drawable="secuso_minesweeper" />
 	<item component="ComponentInfo{br.com.taglivros.tomo.app/br.com.taglivros.tomo.app.MainActivity}" drawable="tag_livros" />
 	<item component="ComponentInfo{com.xplora.xplorao2o/com.xplora.xplorao2o.activity.SplashActivity}" drawable="xplora" />
+	<item component="ComponentInfo{network.loki.messenger.fdroid/network.loki.messenger.RoutingActivity}" drawable="session" />
 </resources>
