Fix Avion Rewards
Added more ComponentInfo for Avion Rewards

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5631,6 +5631,7 @@
 	<item component="ComponentInfo{com.rbc.mobile.android/com.rbc.mobile.bud.activities.PreAuthMainActivity}" drawable="rbc" />
 	<item component="ComponentInfo{com.rbc.mobile.android/com.rbc.mobile.bud.pre_auth.common.activity.SplashActivity}" drawable="rbc" />
 	<item component="ComponentInfo{com.rbc.mobile.rjj0/com.rbc.mobile.rewards.common.viper.LaunchActivity}" drawable="avion_rewards" />
+	<item component="ComponentInfo{com.rbc.mobile.rjj0/com.rbc.mobile.rewards.modules.rootgroup.root.views.RootActivity}" drawable="avion_rewards" />
 	<item component="ComponentInfo{com.rbs.mobile.android.natwest/co.uk.rbsg.mobile.android.feature.login.LoginActivity}" drawable="natwest" />
 	<item component="ComponentInfo{com.rbs.mobile.android.rbs/co.uk.rbsg.mobile.android.feature.login.LoginActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.rbs.mobile.android.rbs/co.uk.rbsg.mobile.android.feature.registration.WelcomeActivity}" drawable="bank" />
