--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -22,6 +22,29 @@
 	<item drawable="secuso_minesweeper" />
 	<item drawable="tag_livros" />
 	<item drawable="xplora" />
+	<item drawable="adblock_browser" />
+	<item drawable="adblock_fast" />
+	<item drawable="albatross" />
+	<item drawable="fotmob" />
+	<item drawable="google_wear_os" />
+	<item drawable="memrise" />
+	<item drawable="microsoft_365" />
+	<item drawable="microsoft_auth" />
+	<item drawable="microsoft_azure" />
+	<item drawable="microsoft_bing" />
+	<item drawable="microsoft_one__drive" />
+	<item drawable="photok" />
+	<item drawable="piggyvest" />
+	<item drawable="prisma3d" />
+	<item drawable="reolink" />
+	<item drawable="showmax" />
+	<item drawable="the_athletic" />
+	<item drawable="trivia_crack" />
+	<item drawable="uptodown_app_store" />
+	<item drawable="waking_up" />
+	<item drawable="walli" />
+	<item drawable="zello" />
+	<item drawable="zepp_life" />
 
 	<category title="Google" />
 	<item drawable="android_auto" />
@@ -124,6 +147,7 @@
 	<item drawable="google_voice_search" />
 	<item drawable="google_wallet" />
 	<item drawable="google_wallpapers" />
+	<item drawable="google_wear_os" />
 	<item drawable="google_wifi" />
 	<item drawable="material_gallery" />
 	<item drawable="musicfx" />
@@ -731,6 +755,7 @@
 	<item drawable="flixbus_alt" />
 	<item drawable="flowwow_flowers_alt" />
 	<item drawable="fm_radio_alt" />
+	<item drawable="fotmob_alt" />
 	<item drawable="freezer_alt" />
 	<item drawable="frost_for_facebook_alt" />
 	<item drawable="frost_for_facebook_alt_two" />
@@ -806,14 +831,19 @@
 	<item drawable="medtronic_minimed_alt" />
 	<item drawable="medtronic_minimed_alt_two" />
 	<item drawable="mega_alt" />
+	<item drawable="memrise_alt" />
 	<item drawable="mercari_alt" />
 	<item drawable="messenger_alt" />
 	<item drawable="messenger_lite_alt" />
 	<item drawable="mi_movistar_alt" />
 	<item drawable="mi_security_alt" />
+	<item drawable="microsoft_auth_alt" />
+	<item drawable="microsoft_azure_alt" />
+	<item drawable="microsoft_bing_alt" />
 	<item drawable="microsoft_edge_alt" />
 	<item drawable="microsoft_excel_alt" />
 	<item drawable="microsoft_link_alt" />
+	<item drawable="microsoft_one__drive_alt" />
 	<item drawable="microsoft_one__note_alt" />
 	<item drawable="microsoft_outlook_alt" />
 	<item drawable="microsoft_powerpoint_alt" />
@@ -1296,6 +1326,7 @@
 	<item drawable="tower_of_fantasy_alt" />
 	<item drawable="transmission_remote_alt" />
 	<item drawable="triplinx_alt" />
+	<item drawable="trivia_crack_alt" />
 	<item drawable="trivia_you_alt" />
 	<item drawable="truist_alt" />
 	<item drawable="trust_alt" />
@@ -1314,6 +1345,8 @@
 	<item drawable="vivaldi_snapshot_alt" />
 	<item drawable="vkontakte_alt" />
 	<item drawable="vpn_alt" />
+	<item drawable="waking_up_alt" />
+	<item drawable="walli_alt" />
 	<item drawable="waze_alt" />
 	<item drawable="wow_companion_alt" />
 	<item drawable="xash_three_d_fwgs_alt" />
@@ -1331,6 +1364,7 @@
 	<item drawable="youtube_vanced_alt_four" />
 	<item drawable="youtube_vanced_alt_three" />
 	<item drawable="youtube_vanced_alt_two" />
+	<item drawable="zello_alt" />
 
 	<category title="#" />
 	<item drawable="_0h_h1" />
@@ -1487,9 +1521,10 @@
 	<item drawable="adaway" />
 	<item drawable="adb_manager" />
 	<item drawable="adb_wifi" />
+	<item drawable="adblock" />
 	<item drawable="adblock_browser" />
-	<item drawable="adblock_for_samsung_browser" />
-	<item drawable="adblock_for_samsung_internet" />
+	<item drawable="adblock_fast" />
+	<item drawable="adblock_plus" />
 	<item drawable="add_caster" />
 	<item drawable="adguard" />
 	<item drawable="adguard_vpn" />
@@ -1591,6 +1626,7 @@
 	<item drawable="alarm_klock" />
 	<item drawable="alarmio" />
 	<item drawable="alarmy" />
+	<item drawable="albatross" />
 	<item drawable="albion_online" />
 	<item drawable="alchan" />
 	<item drawable="alchemy_stars" />
@@ -3201,6 +3237,7 @@
 	<category title="F" />
 	<item drawable="f1_tv" />
 	<item drawable="f45_training" />
+	<item drawable="fab_adblocker_browser" />
 	<item drawable="f_colors" />
 	<item drawable="f_droid" />
 	<item drawable="f_droid_build_status" />
@@ -4653,6 +4690,7 @@
 	<item drawable="micro_rpg" />
 	<item drawable="microg" />
 	<item drawable="microg_settings" />
+	<item drawable="microsoft_365" />
 	<item drawable="microsoft_account" />
 	<item drawable="microsoft_admin" />
 	<item drawable="microsoft_auth" />
@@ -5555,6 +5593,7 @@
 	<item drawable="photo_pills" />
 	<item drawable="photo_studio" />
 	<item drawable="photodirector" />
+	<item drawable="photok" />
 	<item drawable="photolayers" />
 	<item drawable="photomath" />
 	<item drawable="photon" />
@@ -5575,6 +5614,7 @@
 	<item drawable="picsart_color" />
 	<item drawable="picsay" />
 	<item drawable="pie_launcher" />
+	<item drawable="piggyvest" />
 	<item drawable="pigments" />
 	<item drawable="pikabu" />
 	<item drawable="pikmin_bloom" />
@@ -5743,6 +5783,7 @@
 	<item drawable="printer" />
 	<item drawable="prism" />
 	<item drawable="prisma" />
+	<item drawable="prisma3d" />
 	<item drawable="privacy_blur" />
 	<item drawable="privacy_browser" />
 	<item drawable="privacy_com" />
@@ -5961,6 +6002,7 @@
 	<item drawable="remote_mouse" />
 	<item drawable="renfe" />
 	<item drawable="renshuu" />
+	<item drawable="reolink" />
 	<item drawable="repainter" />
 	<item drawable="repix" />
 	<item drawable="replika" />
@@ -6279,6 +6321,7 @@
 	<item drawable="shosetsu" />
 	<item drawable="should_i_answer" />
 	<item drawable="showly" />
+	<item drawable="showmax" />
 	<item drawable="showroom" />
 	<item drawable="showtime" />
 	<item drawable="shpock" />
@@ -6840,6 +6883,7 @@
 	<item drawable="that_level_again" />
 	<item drawable="the__score" />
 	<item drawable="the__score_esports" />
+	<item drawable="the_athletic" />
 	<item drawable="the_baby_in_yellow" />
 	<item drawable="the_battle_cats" />
 	<item drawable="the_battle_of_polytopia" />
@@ -7193,6 +7237,7 @@
 	<item drawable="ups" />
 	<item drawable="uptimerobot" />
 	<item drawable="uptodate" />
+	<item drawable="uptodown_app_store" />
 	<item drawable="upwork" />
 	<item drawable="upwork_for_freelancers" />
 	<item drawable="urban_dictionary" />
@@ -7718,6 +7763,7 @@
 	<item drawable="zepeto" />
 	<item drawable="zeplin" />
 	<item drawable="zepp" />
+	<item drawable="zepp_life" />
 	<item drawable="zermelo" />
 	<item drawable="zero_tracker" />
 	<item drawable="zeronet" />
